# rust-image-viewer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  build-installers.ps1  build.rs  cargo_check_output.txt  config.ini  rust-image-viewer.ini
.github/workflows/: ci.yml  deploy.yml  manual-deploy.yml  nightly.yml  test.yml
assets/: config.ini  rust-image-viewer-config.ini
benches/: perf_baseline.rs
packaging/nsis/: installer.nsi
packaging/wix/: main.wxs
scripts/: build-wix-installer.ps1
src/: animation.rs  app.rs  app_dirs.rs  async_runtime.rs  config.rs  folder_travel_cache.rs  gpu_masonry.rs  gst_plugin_scanner_wrapper.rs  image_loader.rs  image_resize.rs  input.rs  lod_cache.rs  main.rs  manga_loader.rs  manga_spatial.rs  masonry_static.rs  media_index.rs  metadata_cache.rs  perf_metrics.rs  renderer.rs  single_instance.rs  ui.rs  video_player.rs  video_thumbnail.rs  window.rs  windows_env.rs
src/shaders/: gpu_masonry_compute.wgsl  gpu_masonry_draw.wgsl  image.wgsl  ui.wgsl
wix/: Eula.rtf  main.wxs
