[package]
name = "rust-image-viewer"
version = "1.0.0"
edition = "2021"
authors = ["Image Viewer"]
description = "High-performance image and video viewer for Windows 11"
license = "MIT"
build = "build.rs"

[dependencies]
# GUI framework
eframe = { version = "0.29" }
egui = "0.29"
# egui_extras is optional - we use our own optimized image loader
# Keeping it as optional dependency in case needed for future features
egui_extras = { version = "0.29", features = ["image"], optional = true }

# Image handling
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }

# GIF animation support
gif = "0.13"

# GStreamer for video playback
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-app = "0.23"
gstreamer-audio = "0.23"

# Concurrency & parallelism for high-performance manga mode
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "dwmapi", "libloaderapi", "winreg", "processenv", "synchapi", "handleapi", "namedpipeapi", "fileapi", "winbase", "errhandlingapi", "winerror", "minwinbase"] }

[build-dependencies]
# For build script to copy config.ini and embed Windows icon (.ico)
fs_extra = "1.3"
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Debug profile optimizations - reduce memory usage during development too
[profile.dev]
opt-level = 1

# Use thin LTO for faster builds with good optimization
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4

[[bin]]
name = "rust-image-viewer"
path = "src/main.rs"
