[package]
name = "rust-image-viewer"
version = "0.3.8"
edition = "2021"
authors = ["Image Viewer"]
description = "High-performance image and video viewer for Windows 10/11"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cosmokud/rust-image-viewer"
homepage = "https://github.com/cosmokud/rust-image-viewer"
keywords = ["image", "video", "viewer", "egui", "gstreamer"]
categories = ["multimedia", "graphics", "gui"]
rust-version = "1.76"
build = "build.rs"

[features]
default = []
mimalloc-allocator = ["dep:mimalloc"]

[dependencies]
# GUI framework
eframe = { version = "0.29" }
egui = "0.29"
# egui_extras is optional - we use our own optimized image loader
# Keeping it as optional dependency in case needed for future features
egui_extras = { version = "0.29", features = ["image"], optional = true }

# Image handling
image = { version = "0.25", default-features = false, features = ["webp", "ico", "tiff"] }
zune-core = "0.5"
zune-image = { version = "0.5", default-features = false, features = ["jpeg", "png", "webp", "bmp", "psd", "jpeg-xl", "simd"] }
webp-animation = "0.10"
imagesize = "0.13"
fast_image_resize = "6.0"
memmap2 = "0.9"

# GIF animation support
gif = "0.14"
gif-dispose = "6.0"

# GStreamer for video playback
gstreamer = "0.23"
gstreamer-video = "0.23"
gstreamer-app = "0.23"
gstreamer-audio = "0.23"

# Concurrency & parallelism for high-performance manga mode
rayon = "1.10"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
bytes = "1.7"
interprocess = "2.4"
parking_lot = "0.12"
lru = "0.12"
hashbrown = "0.15"
hdrhistogram = "7.5"
jwalk = "0.8"
smallvec = "1.13"
redb = "2.6"
moka = { version = "0.12", features = ["sync"] }
rstar = "0.12"
# crates.io does not currently expose a crate literally named `image-simd`.
# We alias `wide` under this name for SIMD pixel math in hot paths.
image-simd = { package = "wide", version = "0.7" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
puffin = "0.19"
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time", "net"] }
mimalloc = { version = "0.1", optional = true }
trash = "5.2"
directories = "6.0"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "dwmapi", "libloaderapi", "winreg", "processenv", "synchapi", "handleapi", "namedpipeapi", "fileapi", "winbase", "errhandlingapi", "winerror", "minwinbase"] }
clipboard-win = "5.4"
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_Foundation", "Win32_Graphics_Gdi"] }

[build-dependencies]
# For build script to copy default config template (assets/config.ini) and embed Windows icon (.ico)
fs_extra = "1.3"
winres = "0.1"
directories = "6.0"

[package.metadata.packager]
product-name = "Rust Image Viewer"
identifier = "dev.rust-image-viewer.app"
publisher = "Rust Image Viewer Contributors"
description = "High-performance image and video viewer for Windows 10/11"
license-file = "LICENSE"
formats = ["nsis"]
out-dir = "target/packager"
binaries-dir = "target/release"
before-packaging-command = "cargo build --release"
icons = ["assets/icon.ico"]

[[package.metadata.packager.file-associations]]
extensions = ["jpg", "jpeg", "png", "webp", "gif", "bmp", "psd", "ico", "tiff", "tif"]
description = "Image File"
name = "RustImageViewer.Image"

[[package.metadata.packager.file-associations]]
extensions = ["mp4", "mkv", "webm", "avi", "mov", "wmv", "flv", "m4v", "3gp", "ogv"]
description = "Video File"
name = "RustImageViewer.Video"

[package.metadata.packager.nsis]
install-mode = "currentUser"
template = "packaging/nsis/installer.nsi"
appdata-paths = ["$APPDATA/rust-image-viewer", "$LOCALAPPDATA/rust-image-viewer"]
preinstall-section = '''
; Keep current-user install path at AppData\Local\rust-image-viewer instead of product display name.
Section PreInstallPathOverride
  !if "${INSTALLMODE}" == "currentUser"
    StrCmp $INSTDIR "$LOCALAPPDATA\${PRODUCTNAME}" 0 +2
    StrCpy $INSTDIR "$LOCALAPPDATA\rust-image-viewer"
  !endif
SectionEnd
'''

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.12"

[target.'cfg(not(windows))'.dev-dependencies]
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Debug profile optimizations - reduce memory usage during development too
[profile.dev]
opt-level = 1

# Use thin LTO for faster builds with good optimization
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4

[[bin]]
name = "rust-image-viewer"
path = "src/main.rs"

[[bench]]
name = "perf_baseline"
harness = false
